--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 rvm:
   - 1.8.7
   - 1.9.2
-  - ruby-head
-  - ree
-  - rbx
+  - 1.9.3
+  - 2.0.0
+  - jruby-18mode
+  - jruby-19mode
+  - rbx-18mode
   - rbx-19mode
-  - jruby
-
+  - rbx-2.1.1
+  - ruby-head
+  - jruby-head
+  - ree
